<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/m3_pitch_black">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/permission_guide"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/m3_text_primary"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/banner_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/m3_surface_stroke"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toStartOf="@id/banner"
        app:layout_constraintEnd_toEndOf="@id/banner" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/permission_guide"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintVertical_weight="0.9"
        app:layout_constraintBottom_toTopOf="@id/welcome_text"
        app:srcCompat="@drawable/welcome2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="16sp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/permissionFragmentText"
        android:textColor="@color/m3_text_secondary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_guideline"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="0.2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cornerRadius="28dp"
        android:layout_height="60dp"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:backgroundTint="?attr/colorPrimary"
        app:icon="@drawable/baseline_arrow_forward_white_24dp"
        app:iconTint="?attr/colorOnPrimary"
        app:iconGravity="end"
        android:text="@string/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_permission_button"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cornerRadius="28dp"
        android:layout_height="60dp"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:backgroundTint="?attr/colorPrimary"
        android:text="@string/setPermission"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>